<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".presentation.view.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="#FFA500"
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_of_thefew_steps_toset_you_up_with_a_bank_account"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="20dp"
            android:id="@+id/first_of_the_few_text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_of_the_few_text"
        app:layout_constraintBottom_toTopOf="@+id/declaration"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="PAN NUMBER"
            android:id="@+id/pan"
            android:layout_marginTop="40dp"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_pan_card"
            android:maxLength="10"
            android:paddingStart="4dp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:background="@drawable/selector"
            app:layout_constraintTop_toBottomOf="@+id/pan"
            app:layout_constraintStart_toStartOf="parent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edit_pan_card"
            android:text="BIRTHDATE"
            android:id="@+id/birth"
            android:layout_marginTop="40dp"
            />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:weightSum="3"
         android:id="@+id/birth_day_et"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/birth"
         >
         <androidx.appcompat.widget.AppCompatEditText
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="4dp"
             android:background="@drawable/selector"
             android:layout_weight="1"
             android:id="@+id/day"
             android:gravity="center"
             android:maxLength="2"
             android:maxLines="1"
             android:inputType="number"
             android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
             />
         <androidx.appcompat.widget.AppCompatEditText
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
             android:id="@+id/month"
             android:gravity="center"
             android:maxLength="2"
             android:maxLines="1"
             android:inputType="number"
             android:background="@drawable/selector"

             />
         <androidx.appcompat.widget.AppCompatEditText
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
             android:gravity="center"
             android:maxLength="4"
             android:maxLines="1"
             android:inputType="number"
             android:id="@+id/year"
             android:background="@drawable/selector"

             />

     </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/birth_day_et"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="top|center"
                android:text="@string/day"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="top|center"
                android:text="@string/month"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="top|center"
                android:text="@string/year"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/declaration"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toTopOf="@+id/but"
        android:layout_marginBottom="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dont_have_pant"
        android:layout_marginBottom="20dp"
        android:id="@+id/but"
        android:background="#e0e0e0"
        android:clickable="false"
        android:textColor="#ffffff"
        android:text="@string/next"

        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/i_don_t_have_pan"
        android:gravity="center"
        android:textSize="14sp"
        android:id="@+id/dont_have_pant"
        android:textColor="#0000FF"
        />

</androidx.constraintlayout.widget.ConstraintLayout>